ubiquity (2.3.19) UNRELEASED; urgency=low

  * Make sure /var/lib/ubiquity/langpacks gets generated (LP: #630924).
  * Fall back to root if the regular user cannot be found in
    ubiquity-dm.
  * Properly handle dmimodel() returning the null string.
  * Fix bootloader installation test (LP: #640341).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 15 Sep 2010 17:31:32 +0100

ubiquity (2.3.18) maverick; urgency=low

  [ Evan Dandrea ]
  * Improve the text on the prepare page, based on input from Matthew
    Paul Thomas, Amanda Brock, and Andrew Sinclair
    (LP: #635269, LP: #635260).
  * Translate latitude and longitude from the Geonames service to its
    respective Olsen timezone database entry.
  * Add back the hostname entry (LP: #628087).
  * Use a block device icon for cases where we cannot detect the
    operating system on a partition.
  * Set the amount of used space on a partition that we presume contains
    no operating system (LP: #626299).
  * Make requiring a password to log in the default again, matching the
    behavior in the previous version of Ubuntu.
  * Use the correct string for the resize partition option.
  * Set the size of the disk on the automatic partitioning page
    (LP: #626299).
  * Use dmidecode to get a more unique suffix for the hostname
    (LP: #628087).
  * Also generate a sample hostname when generating a sample username
    (LP: #634279).
  * Only set the next button to 'Install Now' when not on the first
    partitioning page (LP: #636392).
  * Fix transposed latitude and longitude in geonames lookup.
  * Provide a version parameter to the geoname lookup.
  * Show the number of partitions that will be deleted when in 'use
    entire disk' mode.
  * Remove Pango markup from the debconf templates where possible.
  * Properly set the partition widget description label.
  * Use a GtkMenuBar rather than a GtkMenu as the source of the dark
    styling to match recent changes to the default theme.